Cleanup util and pattern classes